--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
 google-generativeai
-pydantic-settings
-httpx
+pydantic-settings==2.6.0
+httpx==0.27.2
+email-validator==2.2.0
 
