--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://db_61987t01jhj9:mA23oqJ0Rsqm5pP4R7bhvEii@up-de-fra1-postgresql-1.db.run-on-seenode.com:11550/db_61987t01jhj9
-GEMINI_ENDPOINT=https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
-GEMINI_API_KEY=AIzaSyBoyeDFAiv_5Yzowo_8wCaQzIAW2TYQqQI
+GEMINI_API_KEY=AIzaSyCTkr0HblGZRvIOmh4zsn3EonDCpA_QQKo
+GEMINI_ENDPOINT=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+
